--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title> Text Editor</title>
+	<title>Willow Crest</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
