--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<q class="ba-quote">The engineer did not try to overcome the obstacle, and he was wise.
 		</q>
-		<a href="#">discover</a>
+		<a href="#" class="ba-button">discover</a>
 	</main>
 	<!-- END  -->
 
